--- a/project/example/src/assets/sass/main.scss
+++ b/project/example/src/assets/sass/main.scss
@@ -1,5 +1,8 @@
+//Variables
+@import './variables/color';
 // Global Styles
 @import './global/resets.scss';
+@import './global/global.scss';
 // Global Styles end
 
 // Common section style 
