--- a/project/ex/src/assets/sass/global/global.scss
+++ b/project/ex/src/assets/sass/global/global.scss
@@ -1,14 +1,14 @@
 body {
-    font-family: 'arial';
+    font-family: sans-serif;
 }
 
 .container {
     max-width: 1179px;
     margin: 0 auto;
-    padding:17px;
+    padding: 0 16px;
 }
 
-img {
+.logo {
     max-width: 134px;
     height: 11px;
 }
