--- a/project/ex/src/assets/sass/global/resets.scss
+++ b/project/ex/src/assets/sass/global/resets.scss
@@ -1,10 +1,18 @@
 * {
-    margin:0;
     padding: 0;
+    margin: 0;
     box-sizing: border-box;
 }
 
 img {
     display: block;
     width: 100%;
+}
+
+li {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
 }
