--- a/project/ex/src/assets/sass/main.scss
+++ b/project/ex/src/assets/sass/main.scss
@@ -1,6 +1,7 @@
 // Variables
 @import './variables/media';
 @import './variables/color';
+@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css);
 
 // Global Style
 @import './global/resets.scss';
