--- a/project/ex/src/assets/sass/pages/about.scss
+++ b/project/ex/src/assets/sass/pages/about.scss
@@ -4,18 +4,28 @@
     &__container{
         display: flex;
         gap: 148px;
+
+        @media (max-width: $mobile) {
+            flex-direction: column;
+            align-items: center;
+        }
     }
 
     &__txt-r {
-    font-family: 'Lato';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 19px;
-    line-height: 32px;
-    letter-spacing: 0.05em;
-    color: #565656;
-    padding-bottom: 40px;
-    max-width: 540px;
+
+        font-family: 'Lato';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 19px;
+        line-height: 32px;
+        letter-spacing: 0.05em;
+        color: #565656;
+        padding-bottom: 40px;
+        max-width: 510px;
+
+        @media (max-width: $mobile){
+            max-width:288px;
+        }
     }
 
     &__txt{
@@ -27,6 +37,11 @@
         letter-spacing: 0.1em;
         color: #565656;
         padding-bottom: 19px;
+        max-width: 431px;
+
+        @media (max-width: $mobile){
+            max-width: 288px;
+        }
     }
     
     &__heading  {
@@ -45,18 +60,17 @@
         height: 235px;
     }
 
-    &__btn-arrow {
+    &__arrow {
         width: 19px;
         position: absolute;
-        background-color: #000000;
-        bottom: 15%;
-        left: 8%;
+        color: #FFFFFF;
+        bottom: 11%;
     }
 
     &__btn {
         width: 160px;
         height: 45px;
-        background: #565656;
+        background: $color-btn;
         font-family: 'Lato';
         font-style: normal;
         font-weight: 700;
@@ -64,10 +78,20 @@
         line-height: 166%;
         letter-spacing: 0.1em;
         color: #FFFFFF;
+        padding-right: 18px;
+        cursor: pointer;
+
+        :hover > & {
+            background: white;
+            color: black;
+        }
+
     }
 
     &__btn-box {
         position: relative;
-        padding-top: 25px;
+        margin-top: 65px;
+        width: 160px;
+        height: 45px;
     }
 }
