--- a/project/ex/src/assets/sass/pages/about.scss
+++ b/project/ex/src/assets/sass/pages/about.scss
@@ -37,6 +37,7 @@
         letter-spacing: 0.1em;
         color: #565656;
         padding-bottom: 19px;
+        padding-top: 39px;
         max-width: 431px;
 
         @media (max-width: $mobile){
@@ -44,17 +45,6 @@
         }
     }
     
-    &__heading  {
-        font-family: 'Red Hat Display';
-        font-style: normal;
-        font-weight: 400;
-        font-size: 48px;
-        line-height: 64px;
-        letter-spacing: 0.05em;
-        color: #000000;
-        padding-bottom: 39px;
-    }
-
     &__img {
         width: 225px;
         height: 235px;
@@ -65,6 +55,7 @@
         position: absolute;
         color: #FFFFFF;
         bottom: 11%;
+        right: 25%;
     }
 
     &__btn {
@@ -78,20 +69,33 @@
         line-height: 166%;
         letter-spacing: 0.1em;
         color: #FFFFFF;
-        padding-right: 18px;
+        padding-right: 48px;
         cursor: pointer;
+        border: 1px solid transparent;
+        transition: .4s;
 
-        :hover > & {
-            background: white;
-            color: black;
+
+        &:hover {
+            // background: white;
+            // color: black;
+            border: 1px solid #FFFFFF;
+            filter: invert(1);
+
         }
 
     }
 
     &__btn-box {
         position: relative;
-        margin-top: 65px;
+        margin-top: 27px;
         width: 160px;
         height: 45px;
     }
 }
+
+// .about__btn:hover a  {
+//             background: white;
+//             color: black;
+//             transition: 2s;
+
+// }
