--- a/project/ex/src/assets/sass/global/global.scss
+++ b/project/ex/src/assets/sass/global/global.scss
@@ -13,7 +13,7 @@ body {
     height: 11px;
 }
 
-h1 {
+h1, h2 {
     font-family: 'Red Hat Display';
     font-style: normal;
     font-weight: 400;
@@ -23,8 +23,8 @@ h1 {
     color: #000000;
 }
 
-h3 {
 
+h3 {
     font-family: 'Red Hat Display';
     font-style: normal;
     font-weight: 400;
