--- a/project/ex/src/assets/sass/main.scss
+++ b/project/ex/src/assets/sass/main.scss
@@ -10,7 +10,7 @@
 
 // Common section
 @import './common/header.scss';
-@import './common/footer.scss'
+@import './common/footer.scss';
 // Common section End
 
 // Pages Style
