--- a/project/ex/src/assets/sass/global/global.scss
+++ b/project/ex/src/assets/sass/global/global.scss
@@ -13,6 +13,22 @@ body {
     height: 11px;
 }
 
+.wrapper {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    
+}
+
+.hover-link-animation {
+    cursor: pointer;
+    display: block;
+    &:hover {
+        transform: scale(1.1);
+        transition: transform 0.3s ease-in-out;
+    }
+}
+
 h1, h2 {
     font-family: 'Red Hat Display';
     font-style: normal;
