--- a/project/ex/src/assets/sass/common/header.scss
+++ b/project/ex/src/assets/sass/common/header.scss
@@ -16,6 +16,7 @@
 
         @media (max-width: $tablet) {
             display: none;
+
         }
     }
 
@@ -26,11 +27,25 @@
             display: block;
             width: 32px;
             height: 32px;
+            position: relative;
+            z-index: 100;
         }
     }
 
     &__nav-input {
         display: none;
+        &:checked ~ .header__nav-row {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            position: fixed;
+            background-color: $color-grey;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100vh;
+            z-index: 99;
+        }
     }
 
     &__nav-link {
