--- a/project/ex/src/assets/sass/pages/works.scss
+++ b/project/ex/src/assets/sass/pages/works.scss
@@ -9,6 +9,11 @@
     &__content {
         display: flex;
         justify-content: space-between;
+
+        @media (max-width:$mobile) {
+            flex-direction: column;
+            
+        }
     }
 
     &__iner-txt {
